Fix horizontal scrolling, rework content, remove wrapper and main classes

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -4,14 +4,3 @@ body {
   margin: 0;
   color: $rich-black;
 }
-
-.wrapper {
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
-
-main {
-  padding: 2em 4em;
-  max-width: 1200px;
-}
