--- a/src/assets/stylesheets/components/_footer.scss
+++ b/src/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   padding: 2em 4em 2em 4em;
   letter-spacing: 0.3pt;
   color: $isabelline;
-  width: 100%;
+  max-width: 100vw;
   line-height: 2em;
 
   a {
@@ -11,19 +11,11 @@
     text-decoration: none;
     transition: all 0.5s;
   }
+
   a:hover {
     color: $pine-green;
     border-bottom: 1px solid $pine-green;
   }
-}
-
-.Footer-line {
-  width: 150px;
-  border-top: 1px solid #3f3f41;
-  border-left: 0;
-  border-bottom: 0;
-  border-right: 0;
-  margin: 0.5em 0;
 }
 
 @media only screen and (max-width: 999px) {
